# devops-engineer-from-scratch-project-313

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  database.py  entrypoint.sh  main.py  models.py  nginx.conf  package.json  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
app/: conftest.py  database.py  links.py  main.py  pyproject.toml  routes.py
app/tests/: test_main.py
tests/: test_main.py
