[project]
name = "hexlet-code"
version = "0.1.0"
description = "hexlet-code"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.3",
    "flask-cors>=4.0.0",
    "sentry-sdk>=2.53.0",
    "sqlmodel>=0.0.22",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.46",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "ruff>=0.8",
]
